# Catalyst

./: .gitignore  BRAINSTORM.md  README.md  package-lock.json  package.json  tailwind.config.js  wrangler.toml
.claude/: settings.local.json
.github/workflows/: release.yml
docs/: downloads.html  index.html
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: browsers.rs  config.rs  db.rs  lib.rs  main.rs  state.rs  worker.rs
src/components/: BulkImportModal.tsx  HistoryTab.tsx  SettingsPage.tsx
