[package]
name = "catalyst"
version = "0.1.1"
description = "A better video downloader"
authors = []
edition = "2021"

[lib]
name = "catalyst_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri                    = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell       = "2"
tauri-plugin-dialog      = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart   = "2"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
uuid       = { version = "1", features = ["v4"] }
dirs       = "6"
open       = "5"
tokio      = { version = "1", features = ["sync", "time"] }
rusqlite   = { version = "0.31", features = ["bundled"] }
reqwest    = { version = "0.12", features = ["json"] }
